--- a/style/light.scss
+++ b/style/light.scss
@@ -3,7 +3,7 @@
 // 背景 & 字体基础
 $body-bg: #f9f9f9; // 主背景，略亮一点看起来更干净
 $body-color: #1c1e21 !default; // 主体字体颜色，比纯黑略柔和
-$link-color: #4f7c82 !default; // 链接色，专业的蓝色
+$link-color: #4cA59C !default; // 链接色，专业的蓝色
 
 // 导航栏
 $navbar-bg: #ffffff; // 导航栏背景白
@@ -11,7 +11,7 @@ $navbar-fg: #1c1e21; // 导航文字颜色
 $navbar-hl: #0066cc; // 鼠标悬停高亮颜色
 
 // 标题字体颜色
-$headings-color: #4f7c82 !default; // 深靛蓝，沉稳专业
+$headings-color: #4cA59C !default; // 深靛蓝，沉稳专业
 
 // 强调样式
 strong {
