add rope explain

--- a/style/dark.scss
+++ b/style/dark.scss
@@ -5,6 +5,8 @@ $color-sidebar-bg: #1b1b1c; // 侧边栏背景色
 $color-navbar-bg: #1d1e20;
 $color-body-color: #F8FeFE !default; // 亮灰蓝代替 GhostWhite，更自然护眼
 
+$footer-bg: #1d1e20;
+
 // 标题颜色
 $color-headings: #9EF7F7 !default; // 柔和 DodgerBlue（对比好但不刺眼）
 
