--- a/style/dark.scss
+++ b/style/dark.scss
@@ -22,8 +22,8 @@ $color-blockquote-bg: #06192e;
 $color-blockquote-border: #1e90ff;
 
 // 代码区块
-$color-code-bg: #0f87ff;
-$color-code: #fcd34d; // 明黄色（主题中的活泼点）
+$color-code-bg: #454948f1;
+$color-code: #dfdfdf; // 明黄色（主题中的活泼点）
 
 // 表格配色
 $color-table-bg: #031530;
@@ -83,13 +83,12 @@ $link-hover-color: $color-link-hover;
 
 // 强调（调整为更统一的粉蓝调）
 strong {
-  color: $color-strong;
   font-weight: bolder;
 }
 
-em {
-  color: $color-em;
-}
+// em {
+//   color: $color-em;
+// }
 
 // 引用块
 $blockquote-bg: $color-blockquote-bg;
@@ -113,14 +112,7 @@ $info: $color-info;
 $warning: $color-warning;
 $danger: $color-danger;
 
-.theorem {
-  border-left: 4px solid $color-theorem-text; /* A bright blue for contrast */
-  background-color: $color-theorem-bg; /* Dark gray to stand out from pure black */
-  padding: 1em;
-  margin: 1em 0;
-  border-radius: 5px;
-  color: $color-theorem-text; /* Light text for readability */
-}
+
 
 .tech-tags {
   display: flex;
@@ -254,6 +246,7 @@ cite {
   padding-right: 10px;
   text-align: right;
   display: block;
+  border-radius: 8px;
 }
 
 cite a:link {
