--- a/style/light.scss
+++ b/style/light.scss
@@ -4,7 +4,7 @@
 $body-bg: #f9f9f9; // 主背景，略亮一点看起来更干净
 $body-color: #1c1e21 !default; // 主体字体颜色，比纯黑略柔和
 $link-color: #4cA59C !default; // 链接色，专业的蓝色
-
+// $da: #31bbe96b;
 // 导航栏
 $navbar-bg: #ffffff; // 导航栏背景白
 $navbar-fg: #1c1e21; // 导航文字颜色
@@ -13,21 +13,12 @@ $navbar-hl: #0066cc; // 鼠标悬停高亮颜色
 // 标题字体颜色
 $headings-color: #4cA59C !default; // 深靛蓝，沉稳专业
 
-// 强调样式
-strong {
-  color: #0571de !important; // 深蓝灰，比正文深、稳重
-  font-weight: 600; // 比 bold 更柔和的强调
-}
-
-em {
-  color: #94c1ee !important; // 柔和蓝灰色，配合 strong 保持统一
-  font-style: italic;
-}
 
 // 代码块背景 & 字体
 $code-block-bg: #f5f5f5 !default;
-$code-color: #c7254e !default; // 类似 Bootstrap 的 code 高亮色
+$code-color: #37e0f3 !default; // 类似 Bootstrap 的 code 高亮色
 $code-font-size: 0.9em !default;
+$color-code-bg: #4de7c0f1;
 
 // 表格条纹颜色
 $table-striped-bg: #f0f8ff;
@@ -59,13 +50,7 @@ pre {
   padding: 0.2em 0.4em;
 }
 
-.theorem {
-  border-left: 4px solid #2c3e50;
-  background-color: #f9f9f9;
-  padding: 1em;
-  margin: 1em 0;
-  border-radius: 5px;
-}
+
 
 .quarto-title-meta-contents .quarto-title-meta-tag {
   background-color: #d1e7dd;
@@ -207,6 +192,7 @@ cite {
   padding-right: 10px;
   text-align: right;
   display: block;
+  border-radius: 8px;
 }
 
 cite a:link {
